--- a/cv.css
+++ b/cv.css
@@ -1,63 +1,57 @@
 body {
-	margin:auto;
-	width: 1000px;
 	font-family: Arial, sans-serif;
 	background-color: antiquewhite;
-	justify-content: space-evenly;
+	
 }
 
 .containers_cv {
-    display: flex;
-    flex-wrap: wrap;
+	display:flex;
+	flex-direction: row;
 	justify-content: space-between;
-    align-items: center;
-    padding: 20px;
-    position: relative;
+	align-items: center;
+
 }
 
 .cv_recto, .cv_verso {
 	border: 2px solid black;
-	flex: 1;
     text-align: center;
     border: 1px solid #ccc;
     margin: 10px;
 	z-index: 0;
+	height: 666px;
+	width: 500px;
 }
 
 .cv_recto {
 	background-color: white;
-	height: 650px;
 	display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
+	flex-direction: column;
 }
 
 .cv_verso {
 	background-color: white;
-
+	display: grid;
+	grid-template-rows: 15%; 
+    grid-template-columns: auto auto;
 }
 
 .re_me {
-	width:200px;
+	width:160px;
 	border-radius: 50%;
-	position: absolute; 
-	z-index: 2;
-	bottom: 36%;
 }
 
 .rectangle {
 	width: 100%;
     height: 150px; 
     background-color: rgb(255, 214, 221);
-	z-index: 1;
 	text-align: center;
-	position: relative;
-}
-
-.contact_div {
-	position: absolute;
-    top: 0;
-    right: 30px;
+	display:flex;
+	justify-content: space-around;
+	align-self: center;
+	margin-top: -10%;
+	margin-bottom: -10px;
 }
 
 .contact {
@@ -74,97 +68,101 @@ body {
 	margin-bottom: -5px;
 }
 
-
 .name_sup {
-	align-self: flex-start;
-	position: absolute;
+	
 	font-family: "Apple Chancery", cursive;
 	font-size: 70px;
-	margin: 0;
+	margin:0;
 	z-index:2;
 }
 
 .name_inf1 , .name_inf2{
-	align-self: flex-start;
-	position: absolute;
 	font-size: 100px;
-	margin: 0px;
-	z-index: 1;
+	position: absolute;
+	margin:0;
+	z-index:1;
 	color: rgb(255, 230, 233);
 	font-family: "Snell Roundhand", cursive;
 }
 
+.name_inf1 {
+	top: 7px;
+}
+
 .name_inf2 {
-	top: 145px;
+	top:120px;
 }
 
 .resum {
-	position: absolute;
-	align-self: flex-end;
-	text-align: center;
 	width: 400px;
-	bottom: 100px;
-}
-
-.picture {
-	float:left;
-	margin-top: -20px;
+	margin-bottom: 20%;
 }
 
 .script {
-	float:right;
-	width: 60%;
+	width: 100%;
 	font-size: 10px;
-
+	background-color: rgb(206, 169, 240);
+	flex-direction: column;
 }
 
 .pink_circle {
-	position: absolute;
     width: 225px;
     height:200px; 
     background-color: pink; 
 	border-bottom-right-radius: 80% 100%;
 	opacity: 0.4;
-	top:30px;
 }
 
 .me {
-	clip-path: circle(50%);
-	position:relative;
-	 width:100px;
-	 height:100px;
-	 margin:45px;
-	 position: absolute;
+	border-radius: 50%;
+	z-index:2;
+	width:100px;
+	height:100px;
+	margin: 40px;
+
+
 }
 
-.formation {
-	margin-bottom: 15px;
+.title_part {
 	font-size: 11px;
+	margin-top:-2px;
 }
 
 .myname {
-    font-size: 15px;
-	margin-left: 15%;
-	position:relative;
+	font-size: 15px;
 }
 
 .myjob {
-    font-size: 12px;
-	margin-left: 13%;
-	margin-top: -10px;
-	position:relative;
+	font-size: 12px;
 }
 
+.pink_bar2 {
+	border-top: 2px solid palevioletred;
+	text-align: center;
+	width: 40%;
+	
+}
+
+.info_perso {
+	width: 60%;
+	font-size:10px;
+	background-color: rgb(172, 172, 248);
+	grid-column: 1 / 2;
+	grid-row: 2 / 5;
+}
+
+.info {
+}
 .exp {
-	width:60%;
-	float:right;
+	background-color: rgb(189, 238, 189);
 	font-size: 10px;
+	grid-column: 2 / 3;
+	grid-row: 2 / 5;
 }
 
 .formation_part 
 {
-	margin-left: 20%;
-	margin-right: auto;
+	
 }
 
 .pink_bar1 {
@@ -177,7 +175,7 @@ body {
 
 .school {
 	font-weight: bolder;
-	margin-bottom: -6px;
+	margin-bottom:-10px;
 }
 
 .place_school , .work {
@@ -194,9 +192,7 @@ body {
 
 .career
 {
-	display:block;
-	margin-left: 20%;
-	margin-right: auto;
+	
 }
 
 
@@ -205,45 +201,28 @@ body {
 	margin-bottom: -5px;
 }
 
-.pink_bar2 {
-	border-top: 2px solid palevioletred;
-	text-align: center;
-	width: 60%;
-	margin-top: 20px;
-}
-
-.info_perso {
-	width: 40%;
-	float:left;
-	margin-top: 80px;
-	font-size:10px;
-	
-}
-
-.info {
-	margin-bottom: 20px;
-}
 
 .fa-solid {
 	font-size: 10px;
 	margin-right: 5px;
 }
 
-.palmier_bot {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    width: 250px;
-    z-index: 1;
-
+.first_palm {
+	justify-content: flex-start;
+	align-self: flex-end;
 }
 
+.palmier_bot {
+	width:200px;
+	margin:0;
+}
+
+.second_palm {
+	justify-content: flex-end;
+	align-self: flex-start;
+}
 .palmier_top {
-    position: fixed;
-    top: 0;
-    right: 0;
-    width: 250px;
-    z-index: 1;
+	width:200px;
 }
 
 
