--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 body {
 	font-family: Arial, sans-serif;
 	background-color: antiquewhite;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 	
 }
 
@@ -9,7 +12,7 @@ body {
 	flex-direction: row;
 	justify-content: space-between;
 	align-items: center;
-	text-align: center;
+	height: 100vh;
 }
 
 .cv_recto, .cv_verso {
@@ -33,8 +36,8 @@ body {
 .cv_verso {
 	background-color: white;
 	display: grid;
-	grid-template-rows: 20%; 
-	grid-template-columns: 200px 300px;
+	grid-template-rows: 20% 80%; 
+	grid-template-columns: auto auto;
 }
 
 .re_me {
@@ -83,6 +86,7 @@ body {
 	z-index:1;
 	color: rgb(255, 230, 233);
 	font-family: "Snell Roundhand", cursive;
+	
 }
 
 .name_inf1 {
@@ -101,11 +105,13 @@ body {
 .presentation {
     grid-column: 1 / 3; 
 	position: relative;
+	width:100%;
 }
 .script {
 	height: 100px;
 	font-size: 10px;
 	flex-direction: column;
+	width:100%;
 }
 .me {
     border-radius: 50%;
@@ -121,16 +127,15 @@ body {
 	font-size: 15px;
 	position: absolute;
 	top: 20px;
-	left: 55%;
+	left: 65%;
 }
 
 .myjob {
 	font-size: 12px;
 	position: absolute;
 	top: 40px;
-	left: 50%;
+	left: 60%;
 }
-
 
 .pink_circle {
     width: 225px;
@@ -154,7 +159,7 @@ body {
 	width: 100%;
 	font-size:10px;
 	grid-column: 1;
-	grid-row: 2 / 5;
+	grid-row: 2 / 3;
 	position: relative;
 	top: 10%;
 	height: 400px;
@@ -163,8 +168,8 @@ body {
 .exp {
 	font-size: 10px;
 	grid-column: 2 / 3;
-	grid-row: 2 / 5;
-	position: relative;
+	grid-row:  2 / 3;
+	position:relative;
 	top: -10%;
 }
 
@@ -191,7 +196,7 @@ body {
 
 .job {
 	font-weight: bolder;
-	margin-bottom: -5px;
+	margin-bottom: -10px;
 }
 
 
@@ -220,12 +225,48 @@ body {
 
 
 @media screen and (max-width: 768px) {
-    .container {
-        flex-direction: column;
-        text-align: center;
-    }
+    .cv_recto , .cv_verso {
+		position: absolute;
+		width: 400px;
+		height: 566px;
+		left: 15%;
+	}
 
-    .centered-div {
-        width: 100%;
-    }
+	.cv_recto {
+		z-index: 1;
+		left: 5%;
+	}
+	.cv_verso {
+		z-index:0;
+		transform: rotate(5deg);
+	}
+
+	.containers_cv {
+		width: 100%;
+		cursor: pointer;
+	}
+	.palmier_top, .palmier_bot {
+		z-index:2;
+		position:relative;
+		width: 150px;
+	}
+	.exp , .info_perso {
+		font-size : 9px;
+	}
+
+	.exp {
+		top:-14%;
+	}
+
+	.myname, .myjob {
+		left: 55%;
+	}
+	.myname {
+		top: 2%;
+	}
+	.myjob {
+		top: 20%;
+	}
+
+
 }
