pb de responsive sur petit ecran

--- a/style.css
+++ b/style.css
@@ -225,13 +225,18 @@ body {
 
 
 @media screen and (max-width: 768px) {
-    .cv_recto , .cv_verso {
+   
+	.containers_cv {
+		flex-direction: column;
+		justify-content: flex-start;
+		align-items: flex-start;
+	}
+	.cv_recto , .cv_verso {
 		position: absolute;
-		width: 500px;
-		height: 666px;
-		left: 15%;
+		width: 480px;
+		height: 646px;
+		transform: translate(-50%, -50%);
 		transition: transform 0.3s, z-index 0.3;
-		
 	}
 
 	.cv_recto {
@@ -241,7 +246,8 @@ body {
 
 	.cv_verso {
 		z-index:0;
-		transform: rotate(5deg);
+		left: 10%;
+		transform: rotate(8deg);
 	}
 	
 	.cv_verso:not(.active):hover, .cv_recto:not(.active):hover {
@@ -250,7 +256,7 @@ body {
 	}
 
 	.cv_recto:not(.active) {
-		transform: rotate(-5deg);
+		transform: rotate(-8deg);
 	}
 
 	.cv_recto.active, .cv_verso.active {
@@ -261,20 +267,34 @@ body {
 	.containers_cv {
 		width: 100%;
 	}
+
+	.first_palm, .second_palm {
+		display: block;
+	}
+
 	.palmier_top, .palmier_bot {
 		z-index:3;
-		position:relative;
-		width: 150px;
+		position:absolute;
+		width: 130px;
 	}
+
+	.palmier_top {
+		right:0;
+		top:0;
+	}
+
+	.palmier_bot {
+		left: 0;
+		bottom:0;
+	}
+
 	.myname, .myjob {
 		left: 55%;
 	}
 
-
-
 }
 
-@media screen and (max-width: 390px) {
+@media screen and (max-width: 450px) {
 	.cv_recto, .cv_verso {
 		width: 300px;
 		height: 566px;
