--- a/style.css
+++ b/style.css
@@ -151,7 +151,7 @@ body {
 
 .pink_circle {
     width: 225px;
-    height:200px; 
+    height:195px; 
     background-color: pink; 
 	border-bottom-right-radius: 80% 100%;
 	opacity: 0.4;
@@ -303,6 +303,11 @@ body {
 		top: -55%;
 	}
 
+	.pink_circle {
+		width: 210px;
+		height:185px; 
+	}
+
 }
 
 @media screen and (max-width: 450px) {
@@ -361,7 +366,7 @@ body {
 
 	.pink_circle {
 		width: 175px;
-		height:150px; 
+		height:165px; 
 	}
 
 	.myjob {
